Purge browser cache for dom storage in a smarter way

This CL does:
1. Use the total cache size to decide when to purge memory from in
   memory caches.
2. Use different limits on databases and cache sizes based on the
   platform and the ram available.
3. For low memory devices do not keep any cache around for closed
   databases (closed tabs).
4. Add a memory pressure listener to dom storage. This listener is
   supposed to construct and destruct in same thread. So, it is
   constructed and destructed on UI thread by DOMStorageContextWrapper
   and post tasks purge to the dom task runner.

BUG=610551,607449

Review-Url: https://codereview.chromium.org/1953703004
Cr-Commit-Position: refs/heads/master@{#395418}

Former-commit-id: 454f3cefe1b33de5a422778e5cf09d6311bb7fa7